--- a/iOS MVI Sample/Resources/Base.lproj/Base.strings
+++ b/iOS MVI Sample/Resources/Base.lproj/Base.strings
@@ -31,4 +31,4 @@
 "Home.Request.Path.search" = "search";
 "Home.Request.Parameter.search" = "q";
 "Home.Collection.DefaultCell.identifier" = "HomeCollectionDefaultCell";
-"Home.View.title" = "Search Restaurants";
+"Home.View.title" = "List of Restaurants";
